# pmrs

./: .gitignore  Cargo.toml  Dockerfile  README.md
dashboard/: bun.lockb  package-lock.json  package.json  svelte.config.js
dashboard/src/: app.html
dashboard/src/lib/: utils.ts
dashboard/src/lib/components/: Logo.svelte  Navbar.svelte  Pill.svelte  Progress.svelte  Toggle.svelte
dashboard/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
dashboard/src/routes/api/services/: +server.ts
dashboard/src/routes/api/system/: +server.ts
dashboard/src/routes/system/: +page.server.ts  +page.svelte
include/flack/: Cargo.toml
include/flack/src/: lib.rs
include/flack/testing/flock/: Cargo.toml
include/flack/testing/flock/src/: main.rs
src/: caddy.rs  cli.rs  lib.rs  main.rs  services.rs  sysinfo_wrappers.rs  web.rs
src/systemd/: pmrs.service.template
test/: fail.ts  index.ts
testing/: pmrs.toml
testing/envs/: Cargo.toml
testing/envs/src/: main.rs
testing/fails/: Cargo.toml
testing/fails/src/: main.rs
