[package]
name = "pmrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
parking_lot = "0.12.1"
serde = { version = "1.0.192", features = ["derive"] }
sysinfo = "0.29.10"
toml = "0.8.8"
flack = "*"
tabled = "0.14.0"
color-print = "0.3.5"
rocket = { version = "0.5.0", features = ["json"] }
signal-hook = "0.3.17"
lazy_static = "1.4.0"
ctrlc = "3.4.1"
serde_json = "1.0.108"
rocket_ws = "0.1.0"
